fix: swagger docs
