# docs/swagger.yaml
@@ -1,4 +1,64 @@
 basePath: /
+definitions:
+  dto.ErrorResponse:
+    properties:
+      message:
+        example: ошибка запроса
+        type: string
+    type: object
+  dto.GetSubscriptionFilterListRequest:
+    properties:
+      end_date:
+        type: string
+      id:
+        type: string
+      service_name:
+        type: string
+      start_date:
+        type: string
+    required:
+    - end_date
+    - start_date
+    type: object
+  dto.GetSubscriptionFilterListResponse:
+    properties:
+      end_date:
+        type: string
+      id:
+        type: string
+      start_date:
+        type: string
+    type: object
+  dto.SubscriptionRequest:
+    properties:
+      end_date:
+        type: string
+      price:
+        type: integer
+      service_name:
+        type: string
+      start_date:
+        type: string
+    required:
+    - price
+    - service_name
+    - start_date
+    type: object
+  dto.SubscriptionResponse:
+    properties:
+      end_date:
+        type: string
+      id:
+        type: string
+      price:
+        type: integer
+      service_name:
+        type: string
+      start_date:
+        type: string
+      user_id:
+        type: string
+    type: object
 host: localhost:3001
 info:
   contact: {}
@@ -6,19 +66,162 @@ info:
   title: Subscription Service API
   version: "1.0"
 paths:
-  /ping:
+  /subscriptions:
     get:
-      description: Возвращает pong
+      description: Возвращает список всех подписок
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Список подписок
           schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Пинг
+            items:
+              $ref: '#/definitions/dto.SubscriptionResponse'
+            type: array
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Получить все подписки
       tags:
-      - health
+      - Подписки
+    post:
+      consumes:
+      - application/json
+      description: Создаёт новую подписку
+      parameters:
+      - description: Данные подписки
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.SubscriptionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Создано
+          schema:
+            type: string
+        "400":
+          description: Неверный запрос
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Создать подписку
+      tags:
+      - Подписки
+    put:
+      consumes:
+      - application/json
+      description: Обновляет данные существующей подписки
+      parameters:
+      - description: Обновлённые данные подписки
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.SubscriptionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Обновлено
+          schema:
+            type: string
+        "400":
+          description: Неверный запрос
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Обновить подписку
+      tags:
+      - Подписки
+  /subscriptions/{id}:
+    delete:
+      description: Удаляет подписку по её ID
+      parameters:
+      - description: ID подписки
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "204":
+          description: Удалено
+          schema:
+            type: string
+        "404":
+          description: Не найдено
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Удалить подписку
+      tags:
+      - Подписки
+    get:
+      description: Возвращает подписку по её идентификатору
+      parameters:
+      - description: ID подписки
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Найденная подписка
+          schema:
+            $ref: '#/definitions/dto.SubscriptionResponse'
+        "404":
+          description: Не найдено
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Получить подписку по ID
+      tags:
+      - Подписки
+  /subscriptions/calculate-total:
+    post:
+      consumes:
+      - application/json
+      description: Возвращает сумму всех подписок, соответствующих фильтру
+      parameters:
+      - description: Фильтр для подсчёта
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.GetSubscriptionFilterListRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Результат подсчёта
+          schema:
+            $ref: '#/definitions/dto.GetSubscriptionFilterListResponse'
+        "400":
+          description: Неверный запрос
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Подсчитать сумму подписок
+      tags:
+      - Подписки
 swagger: "2.0"
