# internal/dto/error.go
@@ -1,0 +1,5 @@
+package dto
+
+type ErrorResponse struct {
+	Message string `json:"message" example:"ошибка запроса"`
+}
