# internal/http/handler/subscription/create.go
@@ -6,6 +6,16 @@ import (
 	"github.com/gofiber/fiber/v3"
 )
 
+// @Summary Создать подписку
+// @Description Создаёт новую подписку
+// @Tags Подписки
+// @Accept json
+// @Produce json
+// @Param data body dto.SubscriptionRequest true "Данные подписки"
+// @Success 201 {string} string "Создано"
+// @Failure 400 {object} dto.ErrorResponse "Неверный запрос"
+// @Failure 500 {object} dto.ErrorResponse "Внутренняя ошибка сервера"
+// @Router /subscriptions [post]
 func (h *Handler) Create(c fiber.Ctx) error {
 
 	req := new(dto.SubscriptionRequest)
